<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinnerEstacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/estaciones_arrays"
            android:prompt="@string/estaciones_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/diaMedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/dias_prompt" />
        <Spinner
            android:id="@+id/horaMedida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/horas_prompt" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_buscarDatos"
            android:onClick="buscarDatos" />
    </LinearLayout>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:id="@+id/table">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminante1"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminante2"
                    android:gravity="center"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminante3"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="1">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminante4"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="1">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminante5"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="1">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminante6"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="1">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminante7"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="1">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contaminante8"
                    android:gravity="center" />

            </LinearLayout>

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/row" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/col_cont1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/col_cont2">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/col_cont3">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/col_cont4">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/col_cont5">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/col_cont6">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/col_cont7">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/col_cont8">

                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="#BDCAD2"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            </LinearLayout>

        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="#BDCAD2" />

        <!-- More TableRows -->
    </TableLayout>
</LinearLayout>